--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -167,7 +167,8 @@ jobs:
 
       - name: Upload webgl to itch.io
         uses: robpc/itchio-upload-action@v1
-        if: ${{ matrix.targetPlatform == 'WebGL' }}
+        if: matrix.targetPlatform == 'WebGL'
+        # if: ${{ matrix.targetPlatform == 'WebGL' }}
         with:
           path: bin/${{ env.NAME}}-WebGL-${{ needs.build.outputs.version }}.zip
           project: boersnoes/${{ env.NAME}}
